Fix spacing around profile and control panel

--- a/src/ControlPanel/control_panel.css
+++ b/src/ControlPanel/control_panel.css
@@ -2,8 +2,9 @@
   background: #eee;
   border: 1px solid black;
   border-radius: 10px;
-  min-width: 220px;
-  margin: 15px;
+  width: 100%;
+  min-width: 240px;
+  margin-top: 20px;
   padding: 25px;
 }
 
