--- a/src/Profile/profile.css
+++ b/src/Profile/profile.css
@@ -2,8 +2,9 @@
   background: #eee;
   border: 1px solid black;
   border-radius: 10px;
+  width: 100%;
   min-width: 240px;
-  margin: 15px;
+  margin-top: 20px;
   padding: 25px;
   padding-top: 20px;
 }
